demo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-hello-world-v2
          image: kinitap/demo-hello-world:v1  # Replace with the Docker image name and tag
          ports:
            - containerPort: 8081  # Replace with the port your application listens on
