db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - name: proxied-tcp-5432
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30000   # Choose a port number between 30000 and 32767
  type: LoadBalancer
