demo-ingress.yml
# demo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: kinitap.com   # Replace this with your actual domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-service
                port:
                  number: 80
